--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -1,5 +1,5 @@
 // SCREEN SIZES
-$screen-xs: 576px;
-$screen-sm: 768px;
-$screen-md: 992px;
-$screen-lg: 1200px;
+$screen-xs: 575.98px;
+$screen-sm: 767.98px;
+$screen-md: 991.98px;
+$screen-lg: 1199.98px;
